Fix letter spacing on project titles

--- a/_sass/typography.sass
+++ b/_sass/typography.sass
@@ -35,6 +35,7 @@ h3,
 .projectTitle
   font-size: 1em
   font-weight: 700
+  letter-spacing: 0.02em
   line-height: 1.1111
 
 p,
